fixing some hard-wired entries.